--- a/.github/workflows/i18n-extract.yml
+++ b/.github/workflows/i18n-extract.yml
@@ -1,7 +1,7 @@
 name: i18n extraction
-on:
-  push:
-    branches: [ general-devel ]
+on: [push]
+  # push:
+  #   branches: [ general-devel ]
 jobs:
   extract:
     runs-on: ubuntu-latest
